[gd_scene load_steps=4 format=3 uid="uid://dvcoejwb3a56f"]

[ext_resource type="Script" path="res://scripts/entities/enemy_small.gd" id="1_easww"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hr8gj"]
size = Vector2(25, 49.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kgio"]
size = Vector2(26.5, 50.5)

[node name="EnemySmall" type="CharacterBody2D"]
script = ExtResource("1_easww")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(51, 53)
shape = SubResource("RectangleShape2D_hr8gj")

[node name="EnemyBody" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 101.0
offset_bottom = 101.0
color = Color(0.596078, 0, 0.109804, 1)
metadata/_edit_use_anchors_ = true

[node name="FlashOverlay" type="ColorRect" parent="."]
offset_right = 101.0
offset_bottom = 101.0
metadata/_edit_use_anchors_ = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(51.5, 51)
shape = SubResource("RectangleShape2D_2kgio")
